# WellnessMate

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json  projectplan.md  setup.sh  test_bridge.rs  tsconfig.json
python/: __init__.py  ai_engine.py  crew.py  main.py  posture.py  requirements.txt  symptom_checker.py  test_bridge.py
python/agents/: __init__.py  nutritionist.py  therapist.py  trainer.py
python/tasks/: __init__.py  health_tasks.py
python/tools/: health_tools.py
src-tauri/: Cargo.toml  tauri.conf.json  tsconfig.json
src-tauri/src/: main.rs  python_bridge.rs
