[package]
name = "wellnessmate"
version = "0.1.0"
description = "An AI-Powered Personal Health & Posture Companion"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
edition = "2021"
default-run = "wellnessmate"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["dialog-all", "fs-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22.0", features = ["auto-initialize"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[features]
# This feature is used for development builds
# It should not be enabled in release builds
custom-protocol = ["tauri/custom-protocol"]
